add invalid txs; update swagger
