# help/dist/openapi.json
@@ -106,6 +106,46 @@
         }
       }
     },
+    "/api/v1/blocks/{height}/transactions": {
+      "get": {
+        "tags": [
+          "Blocks"
+        ],
+        "summary": "Get list of transactions by block",
+        "operationId": "getBlockTransactions",
+        "parameters": [
+          {
+            "name": "height",
+            "in": "path",
+            "description": "Block height",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of transactions",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TransactionPaginatedCollectionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/coins": {
       "get": {
         "tags": [
@@ -218,6 +258,228 @@
                       "$ref": "#/components/schemas/AddressResponse"
                     }
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/addresses/{address}/transactions": {
+      "get": {
+        "tags": [
+          "Addresses"
+        ],
+        "summary": "Get transactions list by Minter address",
+        "operationId": "getAddressTransactions",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "required": true,
+            "description": "Minter address",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "startblock",
+            "in": "query",
+            "description": "Start block id",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "endblock",
+            "in": "query",
+            "description": "End block id",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of transactions",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TransactionPaginatedCollectionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/transactions": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "summary": "Get transactions list",
+        "operationId": "getTransactions",
+        "parameters": [
+          {
+            "name": "addresses",
+            "in": "query",
+            "description": "List of addresses",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "startblock",
+            "in": "query",
+            "description": "Start block id",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "endblock",
+            "in": "query",
+            "description": "End block id",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of transactions",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TransactionPaginatedCollectionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/transactions/{hash}": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "summary": "Get transaction detail by hash",
+        "operationId": "getTransaction",
+        "parameters": [
+          {
+            "name": "hash",
+            "in": "path",
+            "description": "Transaction hash",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Transaction details",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "$ref": "#/components/schemas/TransactionResponse"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "206": {
+            "description": "Invalid transaction details",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "$ref": "#/components/schemas/InvalidTransactionResponse"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/validators/{pubKey}/transactions": {
+      "get": {
+        "tags": [
+          "Validators"
+        ],
+        "summary": "Get list of transactions by validator",
+        "operationId": "getValidatorTransactions",
+        "parameters": [
+          {
+            "name": "pubKey",
+            "in": "path",
+            "description": "Validator public key",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "startblock",
+            "in": "query",
+            "description": "Start block id",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "endblock",
+            "in": "query",
+            "description": "End block id",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of transactions",
+            "content": {
+              "application-json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TransactionPaginatedCollectionResponse"
                 }
               }
             }
@@ -401,6 +663,123 @@
             "example": 1257.4657
           }
         }
+      },
+      "TransactionResponse": {
+        "properties": {
+          "txn": {
+            "description": "Transaction number",
+            "type": "integer",
+            "example": 17653
+          },
+          "hash": {
+            "description": "Transaction hash",
+            "type": "string",
+            "example": "Mtc923c18c1d842dcba262c63df22003d5ee4e683dc2927acf9580f083ad9e193e"
+          },
+          "nonce": {
+            "description": "Transaction nonce",
+            "type": "integer",
+            "example": 113
+          },
+          "block": {
+            "description": "Block id",
+            "type": "integer",
+            "example": 119
+          },
+          "timestamp": {
+            "description": "Transaction timestamp",
+            "type": "string",
+            "example": "2019-02-14T06:45:18.743Z"
+          },
+          "fee": {
+            "description": "Transaction fee",
+            "type": "string",
+            "example": 0.2
+          },
+          "type": {
+            "description": "Transaction type",
+            "type": "string",
+            "example": "send"
+          },
+          "payload": {
+            "description": "Transaction payload",
+            "type": "string",
+            "example": "Super tx from developers"
+          },
+          "from": {
+            "description": "Transaction sender address",
+            "type": "string",
+            "example": "Mx184ac726059e43643e67290666f7b3195093f870"
+          },
+          "data": {
+            "description": "Transaction data",
+            "type": "object",
+            "properties": {
+              "coin": {
+                "description": "Send coin symbol",
+                "type": "string",
+                "example": "MNT"
+              },
+              "to": {
+                "description": "Receiver address",
+                "type": "string",
+                "example": "Mxee81347211c72524338f9680072af90744333146"
+              },
+              "amount": {
+                "description": "Amount of coins",
+                "type": "string",
+                "example": 12.34654
+              }
+            }
+          }
+        }
+      },
+      "InvalidTransactionResponse": {
+        "properties": {
+          "hash": {
+            "description": "Transaction hash",
+            "type": "string",
+            "example": "Mtc923c18c1d842dcba262c63df22003d5ee4e683dc2927acf9580f083ad9e193e"
+          },
+          "block": {
+            "description": "Block id",
+            "type": "integer",
+            "example": 119
+          },
+          "timestamp": {
+            "description": "Transaction timestamp",
+            "type": "string",
+            "example": "2019-02-14T06:45:18.743Z"
+          },
+          "type": {
+            "description": "Transaction type",
+            "type": "string",
+            "example": "send"
+          },
+          "from": {
+            "description": "Transaction sender address",
+            "type": "string",
+            "example": "Mx184ac726059e43643e67290666f7b3195093f870"
+          }
+        }
+      },
+      "TransactionPaginatedCollectionResponse": {
+        "properties": {
+          "data": {
+            "description": "Transactions",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TransactionResponse"
+            }
+          },
+          "links": {
+            "$ref": "#/components/schemas/PaginationLinksResponse"
+          },
+          "meta": {
+            "$ref": "#/components/schemas/PaginationMetaResponse"
+          }
+        },
+        "type": "object"
       }
     }
   }
